JumpScript/tests/baselines/reference/unusedTypeParameterInMethod4.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod4.jump(2,15): error TS6133: 'X' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInMethod4.jump (1 errors) ====
    class A {
        public f1<X>() {
                  ~
!!! error TS6133: 'X' is declared but its value is never read.
    
        }
    }